# lr2021-tdoa-firmware

./: .clangd  .gitignore  CMakeLists.txt  History_week2.md  README.md  debug.sh  prj.conf
boards/: nrf52840dk_nrf52840.overlay  nrf54l15dk_nrf54l15_cpuapp.overlay  nucleo_l073rz.conf  nucleo_l073rz.overlay  nucleo_l476rg.overlay  nucleo_u575zi_q.overlay  xiao_nrf54l15_nrf54l15_cpuapp.overlay
build_blinky/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  build_info.yml  build_info.yml.bak  cmake_install.cmake  compile_commands.json  sysbuild_modules.txt  zephyr_modules.txt  zephyr_settings.txt
build_blinky/Kconfig/: Kconfig.modules  kconfig_module_dirs.cmake  kconfig_module_dirs.env
build_blinky/Kconfig/arch/: Kconfig
build_blinky/Kconfig/boards/: Kconfig  Kconfig.defconfig  Kconfig.nucleo_l073rz  Kconfig.sysbuild
build_blinky/Kconfig/soc/: Kconfig  Kconfig.defconfig  Kconfig.soc.tmp  Kconfig.sysbuild.tmp
build_blinky/modules/acpica/: cmake_install.cmake
build_blinky/modules/adi/: cmake_install.cmake
build_blinky/modules/atmel/: cmake_install.cmake
build_blinky/modules/cmsis/: cmake_install.cmake
build_blinky/modules/cmsis-dsp/: cmake_install.cmake
build_blinky/modules/cmsis-nn/: cmake_install.cmake
build_blinky/modules/cmsis_6/: cmake_install.cmake
build_blinky/modules/dhara/: cmake_install.cmake
build_blinky/modules/fatfs/: cmake_install.cmake
build_blinky/modules/hal_afbr/: cmake_install.cmake
build_blinky/modules/hal_ambiq/: cmake_install.cmake
build_blinky/modules/hal_bouffalolab/: cmake_install.cmake
build_blinky/modules/hal_espressif/: cmake_install.cmake
build_blinky/modules/hal_ethos_u/: cmake_install.cmake
build_blinky/modules/hal_gigadevice/: cmake_install.cmake
build_blinky/modules/hal_infineon/: cmake_install.cmake
build_blinky/modules/hal_intel/: cmake_install.cmake
build_blinky/modules/hal_nordic/: cmake_install.cmake
build_blinky/modules/hal_nxp/: cmake_install.cmake
build_blinky/zephyr/: .cmake.dotconfig.checksum  .config  .config-trace.json  .config-trace.pickle  cmake_install.cmake  edt.pickle  edt.pickle.cmake.new  isr_tables.c  linker.cmd  linker.cmd.dep  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  runners.yaml  snippets_generated.cmake  syscall_weakdefs_llext.c  zephyr.dts  zephyr.dts.pre  zephyr.stat
scripts/: flash_factory.sh  flash_master.sh.bak  flash_pingpong_master.sh  flash_pingpong_master_915.sh  flash_pingpong_master_preamble245.sh  flash_pingpong_sub.sh  flash_pingpong_sub_915.sh  flash_pingpong_sub_preamble245.sh  flash_ranging_manager.sh  flash_ranging_manager_915.sh  flash_ranging_sub.sh  flash_ranging_sub_915.sh  flash_subordinate.sh  flash_test_l073rz.sh  flash_tx_cw_infinite_preamble.sh
src/: main.c
src/pingpong/: app_periodic_uplink.c  app_periodic_uplink.h  app_ping_pong.c  app_ping_pong.h  main.c  main_ping_pong.h  oled_display.c
src/ranging/: app_ranging_hopping.c  app_ranging_hopping.h  app_ranging_result_output.c  app_ranging_result_output.h  apps_configuration.h  main.c  main_ranging_demo.c  main_ranging_demo.h  oled_display.c  oled_display.h
(+141 files in other folders)
